--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,21 @@
 body{
     margin: 0;
 }
+section{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 header{
     background-color: pink;
     width: 100vw;
     height: 80px;
     position: fixed;
-    
+    z-index: 1;
+}
+a{
+    text-decoration: none;
 }
 header a{
     text-decoration: none;
@@ -20,6 +29,12 @@ header a{
 }
 #inicio{
     min-height: 100vh;
+    background-color: pink;
+}
+#inicio p{
+    font-size: 15px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    width: 40vw;
 }
 #iniciotexto{
     min-height: 100vh;
@@ -30,9 +45,18 @@ header a{
 #informacoesinicio{
     flex-direction: column;
 }
+@font-face {
+    font-family: porky;
+    src: url(../fonte/PORKYS_.TTF);
+}
+h1{
+    font-size: 70px;
+    font-family: porky;
+    margin: 0;
+}
 #img1{
     max-height: 100vh;
-    width: 500px;
+    width: 600px;
 }
 #informacoesmim{
     border: solid 3px pink;
@@ -45,7 +69,18 @@ header a{
     display: flex;
     flex-direction: column;
     max-width: 50vw;
-
+}
+#textosobremim p{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
+}
+#textosobremim p{
+    margin-top: 100px;
+}
+#textosobremim h2{
+    position: absolute;
+    margin-top: 40px;
+    margin-left: 300px;
 }
 #fotomim{
     display: flex;
@@ -54,4 +89,43 @@ header a{
 }
 #img2{
     width: 500px;
+}
+#habilidades{
+    text-align: center;
+    margin: 100px;
+}
+#habilidadesicon img{
+    width: 150px;
+    margin: 40px;
+}
+#habilidadesicon #htmlicon{
+    width: 210px;
+}
+#projetosmim{
+    border: solid 3px pink;
+    margin: 30px;
+    display: flex;
+    justify-content: center;
+}
+#cardprojeto{
+    border: solid 3px black;
+    width: 25vw;
+    min-height: 60vh;
+    margin: 20px;
+    text-align: center;
+}
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: pink;
+    height: 90px;
+}
+#botoesfooter{
+    position: absolute;
+    margin-left: 1200px;
+}
+#botoesfooter img{
+    width: 30px;
+    margin-left: 10px;
 }
