--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,37 +82,45 @@ h1{
 #img1{
     max-height: 100vh;
     width: 700px;
+      transition: transform 0.6s;
+      transform-style: preserve-3d;
 }
 #img1:hover{
-    transform: rotate(15deg);
-    transition: rotate 5s;
+    transition: 0.9s;
+    transform: rotateY(180deg);
 }
 #sobremim, #projetos{
     background-color: #A3F4A3;
 }
 #informacoesmim{
-    border: solid 3px pink;
     margin: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #FECDCD;
+    height: 70vh;
+    width: 90vw;
+    box-shadow: 5px 5px #FBB4C1;
 }
 #textosobremim{
     display: flex;
     flex-direction: column;
-    max-width: 50vw;
+    max-width: 40vw;
+    margin: 20px;
+    text-align: center;
 }
 #textosobremim p{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 15px;
-}
-#textosobremim p{
-    margin-top: 100px;
+    margin-top: 40px;
+    color: white;
 }
 #textosobremim h2{
-    position: absolute;
-    margin-top: 40px;
-    margin-left: 300px;
+    margin: 0;
+    font-family: porky;
+    color: white;
+    font-size: 45px;
+    text-shadow: 3px 3px 4px #F996B5;
 }
 #fotomim{
     display: flex;
@@ -124,7 +132,19 @@ h1{
 }
 #habilidades{
     text-align: center;
-    margin: 100px;
+    background-color: #A3F4A3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../img/imagem\ fundo.png);
+    background-size: contain;
+}
+#habilidades h2{
+    font-family: porky;
+    font-size: 55px;
+    color: white;
+    margin-bottom: 100px;
+    text-shadow: 5px 5px #8FEB91;
 }
 #habilidadesicon img{
     width: 150px;
@@ -132,6 +152,7 @@ h1{
 }
 #habilidadesicon #htmlicon{
     width: 210px;
+    margin-right: 0;
 }
 #projetosmim{
     border: solid 3px pink;
