--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body{
     margin: 0;
+    background-color: #A3F4A3;
 }
 section{
     height: 100vh;
@@ -92,16 +93,29 @@ h1{
 #sobremim, #projetos{
     background-color: #A3F4A3;
 }
+
 #informacoesmim{
     margin: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #FECDCD;
-    height: 70vh;
+    min-height: 70vh;
     width: 90vw;
     box-shadow: 5px 5px #FBB4C1;
 }
+#botoesinfo{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    
+}
+#informacoesmim a img{
+    width: 40px;
+}
+
 #textosobremim{
     display: flex;
     flex-direction: column;
@@ -137,39 +151,86 @@ h1{
     justify-content: center;
     align-items: center;
     background-image: url(../img/imagem\ fundo.png);
-    background-size: contain;
+    background-position-x: center;
+    background-position-y: center;
+    background-size: 1300px;
+
 }
 #habilidades h2{
     font-family: porky;
     font-size: 55px;
     color: white;
-    margin-bottom: 100px;
+    margin-bottom: 10px;
     text-shadow: 5px 5px #8FEB91;
 }
 #habilidadesicon img{
     width: 150px;
     margin: 40px;
+    transition: 0.5s;
+}
+#habilidadesicon img:hover{
+    transform: scale(1.2);
+    transition: 0.5s;
 }
 #habilidadesicon #htmlicon{
     width: 210px;
     margin-right: 0;
 }
 #projetosmim{
-    border: solid 3px pink;
-    margin: 30px;
+    margin-top: 100px;
     display: flex;
     justify-content: center;
+    background-color: #8FEB91;
+    padding: 50px;
+    padding-top: 100px;
+}
+#projetosmim h2{
+    position: absolute;
+    margin-top: -70px;
+    font-family: porky;
+    color: white;
+    font-size: 45px;
+    text-shadow: 3px 3px 4px #6db36e;
 }
 #projetosmim img{
-    width: 330px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 320px;
+    position: absolute;
+    margin-top: -180px;
+}
+#projetosmim h3{
+    position: absolute;
+    margin-top: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+}
+#projetosmim p{
+    position: absolute;
+    margin-top: 160px;
+    color: gray;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
+    max-width: 20vw;
+}
+#projetosmim button{
+    position: absolute;
+    margin-top: 370px;
+    border-radius: 5px;
+    width: 320px;
+    padding: 20px;
+    background-color: #FECDCD;
+    border: none;
+    box-shadow: 2px 2px 3px #FBB4C1;
+}
+#projetosmim button:hover{
+    background-color: #FBB4C1;
+}
+#projetosmim button a{
+    font-size: 20px;
 }
 #cardprojeto{
-    border: solid 3px black;
+    border: solid 3px #A3F4A3;
     width: 25vw;
-    min-height: 60vh;
+    min-height: 70vh;
     margin: 20px;
     text-align: center;
     display: flex;
@@ -177,7 +238,9 @@ h1{
     align-items: center;
     flex-direction: column;
     border-radius: 10px;
+    background-color: white;
 }
+
 #cardprojeto img{
     margin-bottom: 60px;
     border-radius: 5px;
@@ -188,6 +251,12 @@ footer{
     align-items: center;
     background-color: #FECDCD;
     height: 90px;
+    margin-top: 80px;
+}
+footer p{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: black;
+    font-size: 15px;
 }
 #botoesfooter{
     position: absolute;
